end simple page books

--- a/index.html
+++ b/index.html
@@ -33,5 +33,74 @@
 		</div>
 		<!-- /.container -->
 	</header>
+	
+	<!--features-->
+	<section class="features">
+		<div class="container">
+			<h2 class="section-title">Доставка і оплата</h2>
+			
+			<div class="features-wrap">
+				<div class="features-block">
+					<div class="features-block__img">
+						<img src="img/features/shopping.png" alt="shopping card">
+					</div>
+					<div class="features-block__text">Бесплатная доставка<br>
+					381 магазин в сети</div>
+				</div>
+				<!-- /.features-block -->
+
+				<div class="features-block">
+					<div class="features-block__img">
+						<img src="img/features/credit.png" alt="credit card">
+					</div>
+					<div class="features-block__text">Оплата онлайн или наличными при<br> получении</div>
+				</div>
+				<!-- /.features-block -->
+
+				<div class="features-block">
+					<div class="features-block__img">
+						<img src="img/features/car.png" alt="car">
+					</div>
+					<div class="features-block__text">Курьерская доставка: <br>от 2000 р. – бесплатно</div>
+				</div>
+				<!-- /.features-block -->
+
+				<div class="features-block">
+					<div class="features-block__img">
+						<img src="img/features/mailBox.png" alt="mailbox">
+					</div>
+					<div class="features-block__text">Почтой России – <br>в любую точку страны</div>
+				</div>
+				<!-- /.features-block -->
+			</div>
+		</div>
+		<!-- /.container -->
+	</section>
+	<!-- /.features -->
+
+	<!--photos-->
+	<section class="clients">
+		<div class="container">
+			<h2 class="section-title">Кто уже купил ту книгу</h2>
+	
+			<!--clients-wrap-->
+			<div class="clients-wrap">
+				<div class="clients-block-1">
+					<img src="img/persons/person-1.jpg" alt="Adam" class="clients-block-1__img">
+					<img src="img/persons/person-2.jpg" alt="David" class="clients-block-1__img">
+					<img src="img/persons/person-3.jpg" alt="Mark" class="clients-block-1__img">
+					<img src="img/persons/person-4.jpg" alt="Oliver" class="clients-block-1__img">
+				</div>
+				<div class="clients-block-2">
+					<img src="img/persons/person-5.jpg" alt="Adam" class="clients-block-1__img">
+					<img src="img/persons/person-6.jpg" alt="David" class="clients-block-1__img">
+					<img src="img/persons/person-7.jpg" alt="Mark" class="clients-block-1__img">
+					<img src="img/persons/person-8.jpg" alt="Oliver" class="clients-block-1__img">
+				</div>
+			</div>
+			<!--/clients-wrap-->
+			
+		</div>
+	</section>
 </body>
 </html>		
